2007-1-1	fabian

	* Fixed initial window size bug (#1623786).
	* Fixed the bottom border, so it no longer overlaps with the resizing triangle.
	* Added support for unlimited scrollback. Set scroll back lines to -1 or any number larger than 1,000,000.
	
2006-12-28	fabian

	* Added an option to enable/disable the border at the bottom of windows.
	
2006-12-21	fabian

	* Moved some scrolling code from VT100Screen to PTYSession to avoid possible crashes.
	* Changed terminal windows to non-deferred to avoid some initializing problem.
	
2006-12-20	fabian

	* Fixed a selection location bug (#1608727).
	* Fixed a scrolling bug (#1619629).
	
2006-12-19	fabian

	* Fixed a bug in VT100Terminal that causes crashes.
	* Fixed a bug that disables dragging of text.
	
2006-12-18	fabian

	* Updated the "term type" list. Removed xterm that doesn't work for many keys.
	* Added a window border when there's no tab bar at the bottom of screen.
	* Fixed a reverse bold color bug.
	
2006-12-15	fabian

	* Fixed the tabbar-disappearing bug (#1613110).
	* Set echok when launching new sessions (#1472673).
	
2006-12-14	fabian

	* Fixed another bold color bug.
	* Changed the default for "use default title with dynamic title" to NO.
	
2006-12-12	fabian

	* Fixed bold color bug.
	* Changed the wording for the "dynamic title" option.
	
2006-12-11	fabian

	* Fixed transparency bug #1609022.
	
2006-12-8	fabian

	* Fixed a wrapping porblem under ANSI terminals.
	* Incorporated the data processing thread into the data reading thread.
	* Find panel now will set the string system-wide.
	* Added an option in the terminal profile to allow default session name not to be overwritten
	  by dynamic tab name changes.
	* Double click on a parenthesis now selects everything between the pair of parenthesis.
	
2006-12-7	fabian

	* Fixed bug that loses changes to 'Characters considered parts of word' text field.
	* Fixed the "show cursor" behavior in RESET.

2006-12-6	fabian
